Create responsive intro section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/main.css" />
   </head>
   <body>
-    What's up!
+    <section class="light" id="intro">
+      <p>TJHSST</p>
+      <h1>Web<br />Development<br />Club</h1>
+      <p>Wednesday, 8B, Room 16 (Billington)</p>
+    </section>
   </body>
 </html>
