Update meta tags and some styling

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="TJHSST's premier web development club." />
     <title>TJHSST Web Development Club</title>
     <link rel="stylesheet" href="css/main.css" />
     <script
@@ -71,7 +72,9 @@
     </section>
     <section class="light" id="credits">
       <p>Copyright &copy; 2020</p>
-      <p>Design by Akash Bhave (2021)</p>
+      <p>
+        Design by Akash Bhave (<span style="font-style: italic">2021</span>)
+      </p>
     </section>
   </body>
   <script src="script.js"></script>
